pipeline.log
  File "/home/runner/work/livelo_scraper/livelo_scraper/main.py", line 128
    def validar_arquivos_gerados(self):
                                       ^
IndentationError: unindent does not match any outer indentation level
